--- a/gleam.toml
+++ b/gleam.toml
@@ -1,4 +1,4 @@
-name = "gsparse"
+name = "starc"
 version = "1.0.0"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
@@ -15,6 +15,7 @@ version = "1.0.0"
 [dependencies]
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 simplifile = ">= 2.2.1 and < 3.0.0"
+gleescript = ">= 1.4.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.3.0 and < 2.0.0"
