--- a/gleam.toml
+++ b/gleam.toml
@@ -16,6 +16,8 @@ version = "1.0.0"
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 simplifile = ">= 2.2.1 and < 3.0.0"
 gleescript = ">= 1.4.0 and < 2.0.0"
+clip = ">= 1.0.0 and < 2.0.0"
+shellout = ">= 1.7.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.3.0 and < 2.0.0"
