--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,72 @@
 {
-    "files.associations": {
-        "*.star": "go"
+    "editor.tokenColorCustomizations": {
+        "textMateRules": [
+            {
+                "scope": "keyword.control.starlang",
+                "settings": {
+                    "foreground": "#C586C0"
+                }
+            },
+            {
+                "scope": "storage.type.starlang",
+                "settings": {
+                    "foreground": "#4EC9B0"
+                }
+            },
+            {
+                "scope": "support.function.starlang",
+                "settings": {
+                    "foreground": "#DCDCAA"
+                }
+            },
+            {
+                "scope": "entity.name.function.starlang",
+                "settings": {
+                    "foreground": "#DCDCAA"
+                }
+            },
+            {
+                "scope": "constant.language.boolean.starlang",
+                "settings": {
+                    "foreground": "#569CD6"
+                }
+            },
+            {
+                "scope": "keyword.operator.starlang",
+                "settings": {
+                    "foreground": "#D4D4D4"
+                }
+            },
+            {
+                "scope": "constant.numeric.starlang",
+                "settings": {
+                    "foreground": "#B5CEA8"
+                }
+            },
+            {
+                "scope": "comment.line.double-slash.starlang",
+                "settings": {
+                    "foreground": "#6A9955"
+                }
+            },
+            {
+                "scope": "string.quoted.double.starlang",
+                "settings": {
+                    "foreground": "#CE9178"
+                }
+            }
+        ]
     },
-    "[go]": {
-        "editor.formatOnSave": false,
-        "editor.insertSpaces": true
+    "files.associations": {
+        "*.star": "starlang"
+    },
+    "workbench.colorCustomizations": {},
+    "editor.semanticTokenColorCustomizations": {
+        "enabled": true,
+        "rules": {
+            "*.starlang": {
+                "fontStyle": "bold"
+            }
+        }
     }
 }
